--- a/app/globals.css
+++ b/app/globals.css
@@ -66,11 +66,38 @@
     }
   }
 
+  @layer utilities{
+    .flex-center {
+      @apply flex justify-center items-center;
+    }
+
+    .flex-between {
+      @apply flex justify-between items-center;
+    }
+  }
+
   @layer base {
     * {
       @apply border-border;
     }
     body {
       @apply bg-background text-foreground;
+    }
+    
+  }
+  .glassmorphism {
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+  }
+  .glassmorphism2 {
+    background: rgba(18, 17, 17, 0.25);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+  }
+
+  @layer utilities {
+    .flex-center {
+      @apply flex justify-center items-center
     }
   }
